--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,49 @@
+# Environment and secrets
 .env
-.env.example
-CLAUDE.md
-database_setup.sql
-deploy.sh
-DEPLOYMENT.md
-DIGITAL_OCEAN_SECRETS_SETUP.md
-test_local.sh
+.streamlit/secrets.toml
 
+# PM2 logs and process files
+logs/
+.pm2/
+*.log
+pm2-*.log
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+venv/
+ENV/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# IDEs
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Data files
 Researcher_For_Classification.json
+database_setup.sql
